--- a/ansible/templates/digitalocean_terraform.tfvars.j2
+++ b/ansible/templates/digitalocean_terraform.tfvars.j2
@@ -1,3 +1,6 @@
+ansible_groups = {{ ansible_groups }}
+
 do_token = "{{ tokens[_cloud_provider] }}"
+
 root_ssh_key_path= "{{ root_private_key_path }}"
-name = "{{ vps_name }}"
+project = "{{ project_name }}"
