--- a/ansible/templates/hetzner_terraform.tfvars.j2
+++ b/ansible/templates/hetzner_terraform.tfvars.j2
@@ -1,6 +1,34 @@
-ansible_groups = {{ ansible_groups }}
-
 hetzner_token = "{{ tokens[_cloud_provider] }}"
 
 root_ssh_key_path= "{{ root_private_key_path }}"
 project = "{{ project_name }}"
+
+servers = {
+{% if hetzner_host_list is defined%} {% for dict_item in hetzner_host_list %}
+  "{{dict_item['name']}}" = {
+{% if 'server_type' in dict_item %}    server_type = "{{dict_item['server_type']}}"
+{% endif %}
+{% if 'labels' in dict_item %}    labels = {{dict_item['labels']}}
+{% endif %}
+{% if 'image' in dict_item %}    image = "{{dict_item['image']}}"
+{% endif %}
+{% if 'name' in dict_item %}    name = "{{dict_item['name']}}"
+{% endif %}
+{% if 'location' in dict_item %}    location = "{{dict_item['location']}}"
+{% endif %}
+{% if 'backups' in dict_item %}    backups = "{{dict_item['backups']}}"
+{% endif %}
+{% if loop.nextitem is not defined %}
+  }
+{% endif %}
+{% if loop.nextitem is defined %}
+  },
+{% endif %}
+{% endfor %}{% endif %}  
+{% if hetzner_host_list is not defined%}
+  "host1" = {
+    name = "host1"
+    labels = {ansible_group_ansible = "ansible"}
+  }
+{% endif %}
+}
