--- a/ansible/templates/hetzner_terraform.tfvars.j2
+++ b/ansible/templates/hetzner_terraform.tfvars.j2
@@ -1,10 +1,10 @@
-hetzner_token = "{{ tokens[_cloud_provider] }}"
+hetzner_token = "{{ tokens['hetzner'] }}"
 
+project_name = "{{ project_name }}"
 root_ssh_key_path= "{{ root_private_key_path }}"
-project = "{{ project_name }}"
 
 servers = {
-{% if hetzner_host_list is defined%} {% for dict_item in hetzner_host_list %}
+{% if host_list['hetzner'][0]['name'] is defined%} {% for dict_item in host_list['hetzner'] %}
   "{{dict_item['name']}}" = {
 {% if 'server_type' in dict_item %}    server_type = "{{dict_item['server_type']}}"
 {% endif %}
@@ -25,10 +25,10 @@ servers = {
   },
 {% endif %}
 {% endfor %}{% endif %}  
-{% if hetzner_host_list is not defined%}
+{% if host_list['hetzner'][0]['name'] is not defined%}
   "host1" = {
     name = "host1"
-    labels = {ansible_group_ansible = "ansible"}
+    labels = {ansible = ""}
   }
 {% endif %}
 }
